# crewai_playground

./: LICENSE  README.md  report.md
crewai_series/: .gitignore  README.md  requirements.txt
crewai_series/day_01/: README.md  pyproject.toml
crewai_series/day_01/src/: crew.py  main.py
crewai_series/day_01/src/config/: agents.yaml  tasks.yaml
crewai_series/day_02/: README.md  pyproject.toml
crewai_series/day_02/src/: crew.py  main.py
crewai_series/day_02/src/config/: agents.yaml  tasks.yaml
crewai_series/day_03/: README.md  pyproject.toml
crewai_series/day_03/src/: crew.py  main.py
crewai_series/day_03/src/config/: agents.yaml  tasks.yaml
crewai_series/day_04/: README.md
crewai_series/day_04/src/: crew.py  main.py  report.md
crewai_series/day_04/src/config/: agents.yaml  tasks.yaml
crewai_series/day_04/src/tools/: tavily_custom_tools.py
