[project]
name = "day_02"
version = "0.1.0"
description = "day 2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.74.2,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
